# discard_renamed_v1

./: .gitignore  Cargo.toml  index.html  justfile  package.json
rs_db/: Cargo.toml
rs_db/src/: connection.rs  database.rs  error_factory.rs  errors.rs  lib.rs  settings_db.rs
rs_db/src/database/: errors.rs
rs_db/src/settings_db/: init.rs  settings.rs
rs_db/src/settings_db/init/: table_exists.rs  validate_table.rs
rs_db/src/settings_db/util/: constants.rs
rs_db/src_del/: database.rs  settings.rs  settings_db.rs
rs_db/src_del/settings/: get_settings.rs  init.rs  set_settings.rs  settings.rs  types.rs
rs_dev/: Cargo.toml
rs_dev/src/: dev_rs_db.rs  main.rs
rs_errors/: Cargo.toml
rs_errors/src/: lib.rs
rs_fs/: Cargo.toml
rs_rename/: Cargo.toml
rs_response/: Cargo.toml
rs_response/src/: err.rs  lib.rs  ok.rs  ok_with_data.rs  ok_without_data.rs  toast.rs
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/scss/: _variables.scss  global.scss
src/scss/fonts/: _Commissioner.scss  _KoHo.scss  _M-Plus-1p.scss  _Montserrat.scss  _Nunito.scss  _Outfit.scss  _Prompt.scss  _Ubuntu.scss
