[package]
name = "rs_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
rs_response = { path = "../rs_response" }
dirs-next = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
