[package]
name = "rs_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_db = { path = "../rs_db" }
rs_fs = { path = "../rs_fs" }
rs_rename = { path = "../rs_rename" }
rs_response = { path = "../rs_response" }
